# Test

./: Build1.bat  README.md  pyproject.toml  run_gui.py
pokemon_randomizer/: __init__.py  cli.py  core.py  gen1.py  gen2.py  gui.py  options.py  wild.py
tests/: test_randomizer.py
